[package]
name = "randomizer_utilities"
version = "0.0.0"
edition = "2024"

[features]
dmc = ["dep:minhook"]

[dependencies]
archipelago_rs = { path = "../archipelago_rs" }
log = { workspace = true }
windows = { workspace = true, features = ["Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_Memory_NonVolatile", "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Devices", "Win32_Devices_HumanInterfaceDevice", "Win32_Graphics_Direct3D9", "Win32_Graphics_Gdi", "Win32_System_SystemServices", "Win32_Graphics_Dwm", "Win32_System_WindowsProgramming", "Win32_Graphics_Direct2D", "Win32_Graphics_Direct2D_Common", "Win32_Graphics_DirectWrite", "Win32_UI_HiDpi", "Win32_Graphics_Direct3D_Fxc"] }
log4rs = "1.4.0"
figment = { version = "0.10.19", features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
owo-colors = "4.2.3"
xxhash-rust = { version = "0.8.15", features = ["const_xxh3"] }
strum_macros = "0.27.2"

# Overlay Stuff
fontdue = "0.9.3"

# DMC Stuff
minhook = { version = "0.9.0", optional = true }
imgui-sys = "0.12.0"