[package]
name = "randomizer_utilities"
version = "0.0.0"
edition = "2024"

[features]
dmc = ["dep:minhook", "dep:imgui-sys"]

[dependencies]
archipelago_rs = { path = "../archipelago_rs" }
log = { workspace = true }
windows = { workspace = true, features = [
    "Win32_System_LibraryLoader", # Getting Module Handles
    "Win32_System_Diagnostics_Debug", # Exception Handler
    "Win32_System_Memory_NonVolatile", # Virtual Protect
    "Win32_Graphics_Dxgi_Common", # Overlay Stuff
    "Win32_Graphics_Direct3D11", # Overlay Stuff
    "Win32_Graphics_Direct3D_Fxc", # Shader Compilation
    "Win32_System_Kernel", # Adding Exception Handler
] }
log4rs = "1.4.0"
figment = { version = "0.10.19", features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.12"
owo-colors = "4.2.3"
xxhash-rust = { version = "0.8.15", features = ["const_xxh3"] }
strum_macros = "0.27.2"
oneshot = "0.1.13"

# Overlay Stuff
fontdue = "0.9.3"

# DMC Stuff
minhook = { version = "0.9.0", optional = true }
imgui-sys = { version = "0.12.0", optional = true }
